[gd_scene load_steps=7 format=2]

[ext_resource path="res://pet_assets/egg-cracked.png" type="Texture" id=1]
[ext_resource path="res://pet_assets/egg-hatched.png" type="Texture" id=2]
[ext_resource path="res://pet_assets/egg.png" type="Texture" id=3]
[ext_resource path="res://Egg.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "cracked",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hatched",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "egg",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 16.0

[node name="Egg" type="Area2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "egg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 2 )

[node name="AfterHatchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="input_event" from="." to="." method="_on_Egg_input_event"]
[connection signal="timeout" from="AfterHatchTimer" to="." method="_on_AfterHatchTimer_timeout"]
